# florida-scratcher-odds

./: .gitignore  PRD.md  README.md  TODO.md  pyproject.toml
src/fl_scratchers/: cli.py  ev.py  parse.py  scrape.py  storage.py
tests/: test_ev.py  test_parse.py
tests/fixtures/: game_7028.json
