[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-scratchers"
version = "0.1.0"
description = "Expected-value analysis of Florida Lottery scratch-off games"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fl-scratchers = "fl_scratchers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
